# keimet

./: Cargo.toml  build.rs
assets/: logo.txt
src/: bible.rs  main.rs
